[metadata]
name = hammerspoon_bridge
version = 1.0.0
author = Aaron Christiansen
author_email = aaronc20000@gmail.com
description = Interoperate with Hammerspoon through its CLI
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AaronC81/hammerspoon_bridge
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Topic :: Utilities
    Programming Language :: Other Scripting Engines

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
